@@ -14,5 +14,25 @@ $ git push -u origin master
 ## gradle
 ```bash
 $ brew update
-$ brew install gradle
+
+$ gradle --version
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by org.codehaus.groovy.reflection.CachedClass (file:/usr/local/Cellar/gradle/4.10/libexec/lib/groovy-all-2.4.15.jar) to method java.lang.Object.finalize()
+WARNING: Please consider reporting this to the maintainers of org.codehaus.groovy.reflection.CachedClass
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+
+------------------------------------------------------------
+Gradle 4.10
+------------------------------------------------------------
+
+Build time:   2018-08-27 18:35:06 UTC
+Revision:     ee3751ed9f2034effc1f0072c2b2ee74b5dce67d
+
+Kotlin DSL:   1.0-rc-3
+Kotlin:       1.2.60
+Groovy:       2.4.15
+Ant:          Apache Ant(TM) version 1.9.11 compiled on March 23 2018
+JVM:          10.0.2 ("Oracle Corporation" 10.0.2+13)
+OS:           Mac OS X 10.13.6 x86_64
 ```
